# XFStart

./: README.md  meson.build
data/: xfstart.desktop
debian/: changelog  control  rules  xfstart.install
src/: menu.c  plugin.c
